# mapvina-native-ffi

./: CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.zig.zon  mise.toml  pixi.toml  pyproject.toml  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: ci-variant.yml
bindings/java-ffm/: build.gradle.kts
bindings/rust/: PLAN.md  mise.toml
bindings/rust/crates/mapvina-native/: Cargo.toml
bindings/rust/crates/mapvina-native/src/: camera.rs  custom_geometry.rs  events.rs  geojson.rs  geometry.rs  handle.rs  json.rs  lib.rs  logging.rs  map.rs  options.rs  projection.rs  render.rs  resource.rs  runtime.rs  values.rs
bindings/rust/crates/mapvina-native/src/map/: style.rs  tests.rs
bindings/rust/crates/mapvina-native/src/render/: query.rs  tests.rs
bindings/zig/: build.zig  build.zig.zon
cmake/: mln_mapvina_native.cmake  mln_options.cmake  mln_target.cmake  mln_version.cmake
docs/: astro.config.mts
examples/lwjgl-map/: build.gradle.kts
examples/rust-map/: Cargo.toml
examples/swift-map/: Package.swift
examples/zig-map/: build.zig  build.zig.zon  diagnostics.zig  input.zig  main.zig  map_state.zig  render_target.zig
examples/zig-readback/: build.zig  build.zig.zon  main.zig
include/: mapvina_native_c.h
include/mapvina_native_c/: base.h  camera.h  diagnostics.h  logging.h  map.h  projection.h  query.h  render_session.h  render_target.h  runtime.h  style.h  surface.h  texture.h
src/c_api/: boundary.hpp  diagnostics.cpp  logging.cpp  map.cpp  network.cpp  render_session.cpp  runtime.cpp  surface.cpp  (+2 more)
(+260 files in other folders)
